@@ -13,6 +13,7 @@ To Do:
 - create a package of CUS indicators, default CSV plugin import rules to the install process
   so users have a bunch of examples and things to play with
 - rename indicator function (possible main plot indicator panel revision)
+- allow indicator plugins to allow for choosing a plugin as a smoothing option.
 
 
 Maybe some day:
