@@ -59,7 +59,7 @@ the "grab box". The BuyArrow will then follow the mouse pointer. To
 drop the BuyArrow, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the BuyArrow from the chart.<br>
+This will permanently delete the BuyArrow from the chart.<br>
 <br>
 <br>
 <a href="yahoo.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
