@@ -11,8 +11,8 @@
 <h3>Description:</h3>
 This plugin is only used in <a href="cus.html">CUS</a> type formulas.
 The counter counts the number of TRUE signals that appear in the input
-step. The count will continue until a TRUE signal is recieved in the
-reset step. Once a reset is recieved, the counter value is plotted and
+step. The count will continue until a TRUE signal is received in the
+reset step. Once a reset is received, the counter value is plotted and
 the counter is reset back to zero and counting resumes.<br>
 <br>
 <h3>Parameters:</h3>
