@@ -61,9 +61,9 @@ current values when new ones are created.</li>
   </li>
 </ul>
 <p><img style="width: 257px; height: 288px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/editfibonacci.png">&nbsp;
+ src="editfibonacci.png">&nbsp;
 <img style="width: 257px; height: 288px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/editfibonacci2.png"><br>
+ src="editfibonacci2.png"><br>
 </p>
 <br>
 <h3>Move:</h3>
@@ -74,7 +74,7 @@ to adjust the low point and then move the mouse pointer. Once a new
 spot is
 selected, left click the mouse to drop it.
 <h3>Delete:</h3>
-This will permanantly delete the FiboLine from the chart.<br>
+This will permanently delete the FiboLine from the chart.<br>
 <br>
 <br>
 <a href="buyarrow.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
