@@ -59,7 +59,7 @@ three options when a HorizontalLine is selected. Edit, Move and Delete.<br>
 current values when new ones are created.</li>
 </ul>
 <p><img style="width: 248px; height: 176px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/edithorizontal.png"><br>
+ src="edithorizontal.png"><br>
 </p>
 <span style="font-weight: bold;"><br>
 </span>
@@ -71,7 +71,7 @@ pointer as it moves.&nbsp; To
 drop the HorizontalLine, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the HorizontalLine from the chart.<br>
+This will permanently delete the HorizontalLine from the chart.<br>
 <br>
 <br>
 <a href="fiboline.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
