@@ -10,7 +10,7 @@
 </u></h2>
 <h3>Description:</h3>
 This plugin is only used in <a
- href="file:///home/me/mystuff/prog/qtstalker/docs/cus.html">CUS</a>
+ href="cus.html">CUS</a>
 type formulas. This plugin is used to either add, divide, multiply or
 subtract data arrays or value constants. You can select up to 5
 seperate data arrays or constants. The math follows a linear logic in
@@ -48,7 +48,7 @@ division</li>
     <li>MIN - The minimum value found of the previous x bars.</li>
     <li>MAX - The maximum value found of the previous x bars.</li>
   </ul>
-  <li><a href="file:///home/me/mystuff/prog/qtstalker/docs/ctypes.html">Data2</a>
+  <li><a href="ctypes.html">Data2</a>
 - The step # or constant value in
 a CUS formula</li>
   <li><a href="ctypes.html">Data3</a> - The step # or constant value in
