@@ -10,7 +10,7 @@
 </u></h2>
 <h3>Description:</h3>
 This plugin is only used in <a
- href="file:///home/me/mystuff/prog/qtstalker/docs/cus.html">CUS</a>
+ href="cus.html">CUS</a>
 type formulas. This plugin is used for returning a data array of bar
 values. An
 optional period parm can displace the data back a number of bars. This
