@@ -51,7 +51,7 @@ The sell arrow settings are defined as follows:
 current values when new ones are created.</li>
 </ul>
 <p><img style="width: 270px; height: 176px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/editsellarrow.png"><br>
+ src="editsellarrow.png"><br>
 </p>
 <br>
 <h3>Move:</h3>
@@ -60,7 +60,7 @@ the "grab box". The SellArrow will then follow the mouse pointer. To
 drop the SellArrow, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the SellArrow from the chart.<br>
+This will permanently delete the SellArrow from the chart.<br>
 <br>
 <br>
 <a href="horizontalline.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
