@@ -52,7 +52,7 @@ The Text settings are defined as follows:
 current values when new ones are created.</li>
 </ul>
 <p><img style="width: 275px; height: 234px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/edittext.png"><br>
+ src="edittext.png"><br>
 </p>
 <h3><br>
 </h3>
@@ -62,7 +62,7 @@ the "grab box". The Text will then follow the mouse pointer. To
 drop the Text, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the Text from the chart.<br>
+This will permanently delete the Text from the chart.<br>
 <br>
 <br>
 <a href="sellarrow.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
