@@ -65,7 +65,7 @@ and end points selected.<br>
   </li>
 </ul>
 <p><img style="width: 308px; height: 256px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/edittrendline.png"><br>
+ src="edittrendline.png"><br>
 </p>
 <h3><br>
 </h3>
@@ -77,7 +77,7 @@ pointer using the opposing grab box as the axis. To
 drop the TrendLine, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the TrendLine from the chart.<br>
+This will permanently delete the TrendLine from the chart.<br>
 <br>
 <br>
 <a href="text.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
