@@ -51,10 +51,8 @@ The settings are defined as follows:
 current values when new ones are created.</li>
 </ul>
 <p><img style="width: 240px; height: 176px;" alt=""
- src="file:///home/me/mystuff/prog/qtstalker/docs/editvertical.png"><br>
+ src="editvertical.png"><br>
 </p>
-<h3><br>
-</h3>
 <h3>Move:</h3>
 To drag the VerticalLine across the chart, click the left mouse button
 on
@@ -63,7 +61,7 @@ pointer. To
 drop the VerticalLine, click the left mouse button.<br>
 <br>
 <h3>Delete:</h3>
-This will permanantly delete the VerticalLine from the chart.<br>
+This will permanently delete the VerticalLine from the chart.<br>
 <br>
 <br>
 <a href="trendline.html" target="_self"><img src="back.png" border="0" width="32" height="32" alt="Back"></a>
